--- a/style.css
+++ b/style.css
@@ -893,7 +893,7 @@ body {
 
 
 
-@media only screen and (max-width: 460px) {
+@media only screen and (max-width: 549px) and (min-width: 320px) {
 
     /* body{
         padding-left: 20px;
