--- a/style.css
+++ b/style.css
@@ -196,15 +196,57 @@ body {
     margin-right: auto;
     padding-top: 100px;
     position: relative;
+
 }
 
+.background-1 {
+    width: 800px;
+    height: 800px;
+    background-color: rgb(251, 255, 167);
+    position: relative;
+    left: 20%;
+}
 
 .photo-1 {
     display: flex;
-    
-    width: 570px;
+    width: 600px;
     height: 600px;
+    position: absolute;
+    left: 10%;
+    margin-top: 7%;
+
+}
+
+.photo-1 img {
+    width: 550px;
+    height: 600px;
+}
+
+.photo-2 {
+    display: flex;
+    width: 520px;
+    position: absolute;
+    margin-top: 20%;
+    left: 60%;
+}
+
+.photo-2 img {
+    width: 400px;
+
+}
+
+/* 
+
+.photo-1 {
+    display: flex;
+    justify-content: center;
+    height: 600px;
+    width: 750px;
     padding-top: 7%;
+    position: relative;
+    right: 20%;
+    border: 2px solid red;
+    z-index: 1;
     
 
 }
@@ -212,18 +254,19 @@ body {
 .photo-1 img {
     width: 570px;
     height: 600px;
-    position: relative;
     z-index: 1
 
 }
 
 .photo-2 {
     display: flex;
-    justify-content: end;
-    width: 430px;
-    height: 429px;
-    padding-left: 10%;
-    padding-top: 17%;
+    justify-content: center;
+    width: 610px;
+    height: 336px;
+    right: 0px;
+    top: 34%;
+    z-index: 1;
+    border: 2px solid red;
 
 
 }
@@ -231,17 +274,16 @@ body {
 .photo-2 img {
     width: 430px;
     height: 335px;
-    position: absolute;
-    z-index: 1;
+
 }
 
 .background-1 {
     width: 770px;
     height: 800px;
     background-color: rgb(251, 255, 167);
-    position: absolute;
-    right: 0px;
-}
+    position: relative;
+    
+} */
 
 .content-1 {
     display: flex;
@@ -892,7 +934,6 @@ body {
 
 
 
-
 @media only screen and (max-width: 549px) and (min-width: 320px) {
 
     /* body{
@@ -1001,58 +1042,48 @@ body {
     }
 
     .container {
-        width: 100%;
-        height: 224px;
+        width: 99%;
+        height: 100%;
+        /* height: 333px; */
         position: relative;
         padding-top: 10px;
+
 
     }
 
     .background-1 {
-        width: 218px;
-        height: 222px;
-        position: absolute;
-        right: 0;
+        width: 61%;
+        height: 235px;
+        /* left: 28%; */
+
+        left: 19%;
     }
 
-    .photo-both {
-        width: 100%;
-    }
+
 
     .photo-1 {
-        display: flex;
-        justify-content: end;
-        width: 100%;
-        height: 100%;
-        /* width: 156px; */
-        /* height: 168px; */
-        
-
-
+        width: 41%;
+        height: 72%;
+        left: 8%;
 
     }
 
     .photo-1 img {
-        width: 165px;
-        height: 168px;
-        margin-left: 2rem;
+        width: 100%;
+        height: 100%;
     }
 
     .photo-2 {
-        width: 100%;
-        height: 83%;
-        /* width: 120px; */
-        /* height: 131px; */
-        position: relative;
-        
-
-
+        width: 34%;
+        height: 43%;
+        left: 57%;
+        margin-top: 16%;
     }
 
     .photo-2 img {
-        width: 127px;
-        height: 100px;
-        margin-right: 2rem;
+        height: 100%;
+        width: 100%;
+
     }
 
     .content-1 {
@@ -1110,10 +1141,11 @@ body {
     }
 
     .container-1 {
-        width: 100%;
+        width: 99%;
         padding-top: 0;
         height: 386px;
     }
+
 
     .background-2 {
         width: 304px;
@@ -1155,7 +1187,7 @@ body {
     }
 
     .photo-5 {
-        width: 193px;
+        width: 179px;
         height: 190px;
         position: relative;
         left: 49%;
@@ -1175,8 +1207,9 @@ body {
     .image-1 {
         display: flex;
         justify-content: center;
-        width: 389px;
+        width: 351px;
         padding-top: 30px;
+
     }
 
     .image-1 img {
@@ -1365,10 +1398,10 @@ body {
     }
 
     .footer-4 {
-      
-    width: 95%;
-    flex-direction: column;
-    padding-top: 0px;
+
+        width: 95%;
+        flex-direction: column;
+        padding-top: 0px;
 
     }
 
@@ -1488,306 +1521,302 @@ body {
     }
 
     .container {
-        width: 100%;
-        height: 405px;
-        padding-top: 30px;
+        width: 99%;
+        height: 496px;
+        padding-top: 0px;
+
 
     }
 
-    .photo-both {
-        width: 100%;
-    }
 
     .background-1 {
-        width: 59%;
+        width: 55%;
         height: 100%;
+        left: 23%;
     }
 
 
     .photo-1 {
-        width: 40%;
-        height: 78%;
-        top: 13%;
+        width: 44%;
+        height: 75%;
+        margin-top: 7%;
+        left: 8%;
     }
 
-    .photo-1 img {
-        width: 100%;
-        height: 100%;
 
-    }
+.photo-1 img {
+    width: 100%;
+    height: 100%;
 
-    .photo-2 {
-      
-    width: 34%;
-    height: 52%;
-    /* right: 5%; */
-    /* margin-top: -3%; */
-    padding-top: 13%;
-    padding-left: 13%;
+}
 
-    }
+.photo-2 {
+    height: 46%;
+    width: 32%;
+    margin-top: 15%;
 
-    .photo-2 img {
-        width: 40%;
-        height: 51%;
-        padding-top: 0px;
-    }
+}
 
-    .content-1 {
-        width: 99%;
-        margin-top: 30px;
-    }
+.photo-2 img {
+    width: 100%;
+    height: 100%;
+}
 
-    .content-1 h2 {
-        width: 74%;
-        font-size: 20px;
-        line-height: 30px;
-    }
+.content-1 {
+    width: 99%;
+    margin-top: 30px;
+}
 
-    .content-1 p {
-        width: 74%;
-        font-size: 15px;
-        line-height: 30px;
-    }
+.content-1 h2 {
+    width: 74%;
+    font-size: 20px;
+    line-height: 30px;
+}
 
-    .video {
-        width: 73%;
-        padding-top: 30px;
+.content-1 p {
+    width: 74%;
+    font-size: 15px;
+    line-height: 30px;
+}
 
-    }
+.video {
+    width: 73%;
+    padding-top: 30px;
 
-    .video iframe {
-        width: 100%;
-        height: 300px;
-    }
+}
 
-    .download {
-        display: none;
-    }
+.video iframe {
+    width: 100%;
+    height: 300px;
+}
 
-    .content-second-2 {
-        width: 99%;
-        padding-top: 30px;
-    }
+.download {
+    display: none;
+}
 
-    .content-second-2 h2 {
-        width: 76%;
-        font-size: 20px;
-        line-height: 30px
-    }
+.content-second-2 {
+    width: 99%;
+    padding-top: 30px;
+}
 
-    .content-second-2 p {
-        width: 76%;
-        font-size: 15px;
-        line-height: 30px
-    }
+.content-second-2 h2 {
+    width: 76%;
+    font-size: 20px;
+    line-height: 30px
+}
 
-    .container-1 {
-        width: 100%;
-        height: 500px;
-        padding-top: 30px;
+.content-second-2 p {
+    width: 76%;
+    font-size: 15px;
+    line-height: 30px
+}
 
-    }
+.container-1 {
+    width: 100%;
+    height: 500px;
+    padding-top: 30px;
 
-    .background-2 {
-        width: 62%;
-        height: 94%;
-    }
+}
 
-    .image-content {
-        display: flex;
-        justify-content: space-evenly;
-        width: 40%;
-        height: 90%;
-        top: 7%;
-    }
+.background-2 {
+    width: 62%;
+    height: 94%;
+}
 
-    .photo-3 {
-        width: 90%;
-        height: 34%;
-    }
+.image-content {
+    display: flex;
+    justify-content: space-evenly;
+    width: 40%;
+    height: 90%;
+    top: 7%;
+}
 
-    .photo-3 img {
-        width: 100%;
-        height: 100%;
-    }
+.photo-3 {
+    width: 90%;
+    height: 34%;
+}
 
-    .photo-4 {
-        width: 90%;
-        height: 34%;
-    }
+.photo-3 img {
+    width: 100%;
+    height: 100%;
+}
 
-    .photo-4 img {
-        width: 100%;
-        height: 100%;
-    }
+.photo-4 {
+    width: 90%;
+    height: 34%;
+}
 
-    .photo-5 {
-        width: 40%;
-        height: 60%;
-        top: 22%;
-        left: 55%;
-    }
+.photo-4 img {
+    width: 100%;
+    height: 100%;
+}
 
-    .photo-5 img {
-        width: 100%;
-        height: 100%;
-    }
+.photo-5 {
+    width: 40%;
+    height: 60%;
+    top: 22%;
+    left: 55%;
+}
 
-    .content-2 {
-        width: 100%;
-        padding-top: 30px;
+.photo-5 img {
+    width: 100%;
+    height: 100%;
+}
+
+.content-2 {
+    width: 100%;
+    padding-top: 30px;
 
 
-    }
+}
 
-    .content-2 h2 {
-        width: 83%;
-        font-size: 20px;
-    }
+.content-2 h2 {
+    width: 83%;
+    font-size: 20px;
+}
 
-    .content-2 p {
-        width: 83%;
-        font-size: 15px;
-    }
+.content-2 p {
+    width: 83%;
+    font-size: 15px;
+}
 
-    .image-1 {
-        width: 84%;
-        padding-top: 30px;
-    }
+.image-1 {
+    width: 84%;
+    padding-top: 30px;
+}
 
-    .image-1 img {
-        width: 100%;
-    }
+.image-1 img {
+    width: 100%;
+}
 
-    .content-3 {
-        width: 100%;
-        padding-top: 30px;
-    }
+.content-3 {
+    width: 100%;
+    padding-top: 30px;
+}
 
-    .content-3 h1 {
-        width: 77%;
-        font-size: 20px;
-    }
+.content-3 h1 {
+    width: 77%;
+    font-size: 20px;
+}
 
-    .content-3 p {
-        width: 77%;
-        font-size: 15px
-    }
+.content-3 p {
+    width: 77%;
+    font-size: 15px
+}
 
-    .container-2 {
-        width: 100%;
+.container-2 {
+    width: 100%;
 
-        padding-top: 30px;
-    }
+    padding-top: 30px;
+}
 
-    .photo-6 {
-        width: 33%;
-        height: 40%;
+.photo-6 {
+    width: 33%;
+    height: 40%;
 
-    }
+}
 
-    .photo-6 img {
-        width: 100%;
-        height: 100%;
-    }
+.photo-6 img {
+    width: 100%;
+    height: 100%;
+}
 
-    .photo-7 {
-        width: 40%;
-        height: 66%;
-        top: 20%;
-    }
+.photo-7 {
+    width: 40%;
+    height: 66%;
+    top: 20%;
+}
 
-    .photo-7 img {
-        width: 100%;
-        height: 100%;
-    }
+.photo-7 img {
+    width: 100%;
+    height: 100%;
+}
 
-    .background-3 {
-        width: 64%;
-        height: 473px;
-    }
+.background-3 {
+    width: 64%;
+    height: 473px;
+}
 
-    .content-4 {
-        width: 69%;
-        padding-top: 30px;
-    }
+.content-4 {
+    width: 69%;
+    padding-top: 30px;
+}
 
-    .content-4 h2 {
-        font-size: 17px;
-    }
+.content-4 h2 {
+    font-size: 17px;
+}
 
-    .content-4 p {
-        font-size: 15px;
-    }
+.content-4 p {
+    font-size: 15px;
+}
 
-    .container-3 {
-        width: 85%;
-        height: 100%;
-        flex-direction: column;
-        padding-top: 20px;
-        padding-bottom: 40px;
+.container-3 {
+    width: 85%;
+    height: 100%;
+    flex-direction: column;
+    padding-top: 20px;
+    padding-bottom: 40px;
 
-    }
+}
 
-    .photo-8 {
-        width: 100%;
-    }
+.photo-8 {
+    width: 100%;
+}
 
-    .photo-8 img {
-        width: 100%;
-    }
+.photo-8 img {
+    width: 100%;
+}
 
-    .photo-9 {
-        width: 100%;
-    }
+.photo-9 {
+    width: 100%;
+}
 
-    .ableton-main {
-        width: 85%;
-        padding-top: 30px;
-    }
+.ableton-main {
+    width: 85%;
+    padding-top: 30px;
+}
 
-    .footer {
-        width: 85%;
-        flex-direction: column;
+.footer {
+    width: 85%;
+    flex-direction: column;
 
-    }
+}
 
-    .footer-1 {
-        width: 100%;
-        order: 2;
-    }
+.footer-1 {
+    width: 100%;
+    order: 2;
+}
 
-    .footer-2 {
-        width: 100%;
-        order: 3;
-    }
+.footer-2 {
+    width: 100%;
+    order: 3;
+}
 
-    .footer-3 {
-        width: 100%;
-        order: 1;
-    }
+.footer-3 {
+    width: 100%;
+    order: 1;
+}
 
-    #input {
-        width: 100%;
-    }
+#input {
+    width: 100%;
+}
 
-    .footer-4 {
-        width: 86%;
-        flex-direction: column;
+.footer-4 {
+    width: 86%;
+    flex-direction: column;
 
-    }
+}
 
-    .last-footer {
-        width: 86%;
-        flex-direction: column;
-        padding-top: 30px;
-    }
+.last-footer {
+    width: 86%;
+    flex-direction: column;
+    padding-top: 30px;
+}
 
-    .last-contents {
-        width: 65%;
+.last-contents {
+    width: 65%;
 
-    }
+}
 
 
 }
