--- a/style.css
+++ b/style.css
@@ -1144,7 +1144,7 @@ body {
         width: 99%;
         padding-top: 0;
         height: 330px;
-        
+
     }
 
 
@@ -1200,7 +1200,7 @@ body {
     .photo-5 img {
         width: 100%;
         height: 100%;
-        
+
 
 
     }
@@ -1358,7 +1358,7 @@ body {
         order: 2;
         padding-top: 10px;
         margin-left: 0.5rem;
-        
+
     }
 
     .footer-1 a {
@@ -1405,7 +1405,7 @@ body {
         width: 95%;
         flex-direction: column;
         padding-top: 0px;
-        
+
 
     }
 
@@ -1552,279 +1552,315 @@ body {
     }
 
 
-.photo-1 img {
-    width: 100%;
-    height: 100%;
+    .photo-1 img {
+        width: 100%;
+        height: 100%;
 
-}
+    }
 
-.photo-2 {
-    height: 46%;
-    width: 32%;
-    margin-top: 15%;
+    .photo-2 {
+        height: 46%;
+        width: 32%;
+        margin-top: 15%;
 
-}
+    }
 
-.photo-2 img {
-    width: 100%;
-    height: 100%;
-}
+    .photo-2 img {
+        width: 100%;
+        height: 100%;
+    }
 
-.content-1 {
-    width: 99%;
-    margin-top: 30px;
-}
+    .content-1 {
+        width: 99%;
+        margin-top: 30px;
+    }
 
-.content-1 h2 {
-    width: 74%;
-    font-size: 20px;
-    line-height: 30px;
-}
+    .content-1 h2 {
+        width: 74%;
+        font-size: 20px;
+        line-height: 30px;
+    }
 
-.content-1 p {
-    width: 74%;
-    font-size: 15px;
-    line-height: 30px;
-}
+    .content-1 p {
+        width: 74%;
+        font-size: 15px;
+        line-height: 30px;
+    }
 
-.video {
-    width: 73%;
-    padding-top: 30px;
+    .video {
+        width: 73%;
+        padding-top: 30px;
 
-}
+    }
 
-.video iframe {
-    width: 100%;
-    height: 300px;
-}
+    .video iframe {
+        width: 100%;
+        height: 300px;
+    }
 
-.download {
-    display: none;
-}
+    .download {
+        display: none;
+    }
 
-.content-second-2 {
-    width: 99%;
-    padding-top: 30px;
-}
+    .content-second-2 {
+        width: 99%;
+        padding-top: 30px;
+    }
 
-.content-second-2 h2 {
-    width: 76%;
-    font-size: 20px;
-    line-height: 30px
-}
+    .content-second-2 h2 {
+        width: 76%;
+        font-size: 20px;
+        line-height: 30px
+    }
 
-.content-second-2 p {
-    width: 76%;
-    font-size: 15px;
-    line-height: 30px
-}
+    .content-second-2 p {
+        width: 76%;
+        font-size: 15px;
+        line-height: 30px
+    }
 
-.container-1 {
-    width: 100%;
-    height: 632px;
-    padding-top: 30px;
+    .container-1 {
+        width: 100%;
+        height: 632px;
+        padding-top: 30px;
 
-}
+    }
 
-.background-2 {
-    width: 62%;
-    height: 94%;
-}
+    .background-2 {
+        width: 62%;
+        height: 94%;
+    }
 
-.image-content {
-    display: flex;
-    justify-content: space-evenly;
-    width: 40%;
-    height: 90%;
-    top: 7%;
-}
+    .image-content {
+        display: flex;
+        justify-content: space-evenly;
+        width: 40%;
+        height: 90%;
+        top: 7%;
+    }
 
-.photo-3 {
-    width: 90%;
-    height: 34%;
-}
+    .photo-3 {
+        width: 90%;
+        height: 34%;
+    }
 
-.photo-3 img {
-    width: 100%;
-    height: 100%;
-}
+    .photo-3 img {
+        width: 100%;
+        height: 100%;
+    }
 
-.photo-4 {
-    width: 90%;
-    height: 34%;
-}
+    .photo-4 {
+        width: 90%;
+        height: 34%;
+    }
 
-.photo-4 img {
-    width: 100%;
-    height: 100%;
-}
+    .photo-4 img {
+        width: 100%;
+        height: 100%;
+    }
 
-.photo-5 {
-    width: 40%;
-    height: 52%;
-    top: 22%;
-    left: 55%;
-}
+    .photo-5 {
+        width: 40%;
+        height: 52%;
+        top: 22%;
+        left: 55%;
+    }
 
-.photo-5 img {
-    width: 100%;
-    height: 100%;
-}
+    .photo-5 img {
+        width: 100%;
+        height: 100%;
+    }
 
-.content-2 {
-    width: 100%;
-    padding-top: 30px;
+    .content-2 {
+        width: 100%;
+        padding-top: 30px;
 
 
-}
+    }
 
-.content-2 h2 {
-    width: 83%;
-    font-size: 20px;
-}
+    .content-2 h2 {
+        width: 83%;
+        font-size: 20px;
+    }
 
-.content-2 p {
-    width: 83%;
-    font-size: 15px;
-}
+    .content-2 p {
+        width: 83%;
+        font-size: 15px;
+    }
 
-.image-1 {
-    width: 84%;
-    padding-top: 30px;
-}
+    .image-1 {
+        width: 84%;
+        padding-top: 30px;
+    }
 
-.image-1 img {
-    width: 100%;
-}
+    .image-1 img {
+        width: 100%;
+    }
 
-.content-3 {
-    width: 100%;
-    padding-top: 30px;
-}
+    .content-3 {
+        width: 100%;
+        padding-top: 30px;
+    }
 
-.content-3 h1 {
-    width: 77%;
-    font-size: 20px;
-}
+    .content-3 h1 {
+        width: 77%;
+        font-size: 20px;
+    }
 
-.content-3 p {
-    width: 77%;
-    font-size: 15px
-}
+    .content-3 p {
+        width: 77%;
+        font-size: 15px
+    }
 
-.container-2 {
-    width: 100%;
+    .container-2 {
+        width: 100%;
 
-    padding-top: 30px;
-}
+        padding-top: 30px;
+    }
 
-.photo-6 {
-    width: 33%;
-    height: 40%;
+    .photo-6 {
+        width: 33%;
+        height: 40%;
 
-}
+    }
 
-.photo-6 img {
-    width: 100%;
-    height: 100%;
-}
+    .photo-6 img {
+        width: 100%;
+        height: 100%;
+    }
 
-.photo-7 {
-    width: 40%;
-    height: 66%;
-    top: 20%;
-}
+    .photo-7 {
+        width: 40%;
+        height: 66%;
+        top: 20%;
+    }
 
-.photo-7 img {
-    width: 100%;
-    height: 100%;
-}
+    .photo-7 img {
+        width: 100%;
+        height: 100%;
+    }
 
-.background-3 {
-    width: 64%;
-    height: 473px;
-}
+    .background-3 {
+        width: 64%;
+        height: 473px;
+    }
 
-.content-4 {
-    width: 69%;
-    padding-top: 30px;
-}
+    .content-4 {
+        width: 69%;
+        padding-top: 30px;
+    }
 
-.content-4 h2 {
-    font-size: 17px;
-}
+    .content-4 h2 {
+        font-size: 17px;
+    }
 
-.content-4 p {
-    font-size: 15px;
-}
+    .content-4 p {
+        font-size: 15px;
+    }
 
-.container-3 {
-    width: 85%;
-    height: 100%;
-    flex-direction: column;
-    padding-top: 20px;
-    padding-bottom: 40px;
+    .container-3 {
+        width: 85%;
+        height: 100%;
+        flex-direction: column;
+        padding-top: 20px;
+        padding-bottom: 40px;
 
-}
+    }
 
-.photo-8 {
-    width: 100%;
-}
+    .photo-8 {
+        width: 100%;
+    }
 
-.photo-8 img {
-    width: 100%;
-}
+    .photo-8 img {
+        width: 100%;
+    }
 
-.photo-9 {
-    width: 100%;
-}
+    .photo-9 {
+        width: 100%;
+    }
 
-.ableton-main {
-    width: 85%;
-    padding-top: 30px;
-}
+    .main-content {
+        width: 84%;
+        height: 200px;
+        display: flex;
+        flex-direction: column;
+        padding-top: 60px;
 
-.footer {
-    width: 85%;
-    flex-direction: column;
+    }
 
-}
+    .main-content h3 {
+        font-size: 20px;
+        line-height: 25px;
+        font-weight: 400;
+        margin: 10px 0px;
+    }
 
-.footer-1 {
-    width: 100%;
-    order: 2;
-}
+    .ableton-main {
+        width: 85%;
+        padding-top: 30px;
+    }
 
-.footer-2 {
-    width: 100%;
-    order: 3;
-}
+    .ableton-main img {
+        width: 20%;
 
-.footer-3 {
-    width: 100%;
-    order: 1;
-}
+    }
 
-#input {
-    width: 100%;
-}
+    #sign-up {
+        margin: 0;
+    }
 
-.footer-4 {
-    width: 86%;
-    flex-direction: column;
+    .footer {
+        width: 85%;
+        flex-direction: column;
 
-}
+    }
 
-.last-footer {
-    width: 86%;
-    flex-direction: column;
-    padding-top: 30px;
-}
+    .footer-1 {
+        width: 100%;
+        order: 2;
+    }
 
-.last-contents {
-    width: 65%;
+    .footer-2 {
+        width: 100%;
+        order: 3;
+    }
 
-}
+    .footer-3 {
+        width: 100%;
+        order: 1;
+    }
 
+    .footer-3 a {
+        font-size: 14px;
+    }
+
+    #input {
+        width: 100%;
+    }
+
+    .sign input {
+        width: 90px;
+    }
+
+    .footer-4 {
+        width: 86%;
+        flex-direction: column;
+
+    }
+
+    .last-footer {
+        width: 98%;
+        flex-direction: column;
+        padding-top: 30px;
+    }
+
+    .last-contents {
+        display: none;
+
+    }
+
+    .make{
+        flex-direction: row-reverse;
+    }
 
 }
